[workspace]

members = [
    "piet",
    "piet-android",
    "piet-cairo",
    "piet-common",
    "piet-direct2d",
    "piet-test",
    "piet-web",
    "piet-web/examples/basic"
]

default-members = [
    "piet",
    "piet-android",
    "piet-cairo",
    "piet-common",
    "piet-test",
    "piet-web",
    "piet-web/examples/basic"
]

[patch.crates-io]
# Local fork that lets us turn Local and Argument int Global
# jni-glue = {git = "https://github.com/marcopolo/jni-bindgen", branch = "jni-glue-only"}
jni-glue = {path = "../jni-bindgen/jni-glue"}