[package]
name = "piet-android"
version = "0.1.0"
authors = ["Marco Munizaga <marco@marcopolo.io>"]
edition = "2018"

[dependencies]
piet = { version = "0.0.7", path = "../piet" }
unicode-segmentation = "1.3.0"

[target.'cfg(target_os = "android")'.dependencies]
jni-sys = "0.3.0"
jni-glue = "0.0.9"
jni = "0.14.0"
# TODO only ask for specific features
jni-android-sys = {version = "0.0.9",  features = ["api-level-28", "all"]}
android_logger = "0.8"

[dev-dependencies]
piet-test = { version = "0.0.7", path = "../piet-test" }

[patch.crates-io]
# Local fork that lets me turn Local and Argument int Global
jni-glue = {path = "../../jni-bindgen/jni-glue"}

# [lib]
# crate-type = ["cdylib"]
