[package]
name = "piet-android"
version = "0.1.0"
authors = ["Marco Munizaga <marco@marcopolo.io>"]
edition = "2018"

[dependencies]
piet = { version = "0.0.7", path = "../piet" }
unicode-segmentation = "1.3.0"

[target.'cfg(target_os = "android")'.dependencies]
jni-sys = "0.3.0"
jni-glue = "0.0.10"
jni = "0.14.0"
unwrap = "1.2.1"
# TODO only ask for specific features
jni-android-sys = {version = "0.0.10",  features = [
    "android-graphics-Bitmap",
    "android-graphics-Bitmap_Config",
    "android-graphics-Canvas",
    "android-graphics-Color",
    "android-graphics-DashPathEffect",
    "android-graphics-LinearGradient",
    "android-graphics-Matrix",
    "android-graphics-Paint",
    "android-graphics-Paint_Cap",
    "android-graphics-Paint_Join",
    "android-graphics-Paint_Style",
    "android-graphics-Path",
    "android-graphics-PathEffect",
    "android-graphics-Path_FillType",
    "android-graphics-RadialGradient",
    "android-graphics-Rect",
    "android-graphics-Shader",
    "android-graphics-Shader_TileMode",
    "android-graphics-Typeface",
    "api-level-28",
    "java-lang-String",
    "java-nio-Buffer",
    "java-nio-ByteBuffer",
]}

[dev-dependencies]
piet-test = { version = "0.0.7", path = "../piet-test" }
